--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <section id="hero" class="d-flex align-items-center">
     <div class="container d-flex flex-column align-items-center" data-aos="zoom-in" data-aos-delay="100">
       <h1>Jimy Chaudhary</h1>
-      <h2>I'm a Biomicrology Specialist from Idar(Gujarat)</h2>
+      <h2>I'm a Microbiology Specialist from Idar(Gujarat)</h2>
       <a href="about.html" class="btn-about">About Me</a>
     </div>
   </section><!-- End Hero -->
