--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
             <img src="assets/img/about.jpg" class="img-fluid" alt="" style="border-radius:10px;">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>Biomicrology Specialist</h3>
+            <h3>Microbiology Specialist</h3>
             <p class="font-italic">
               Parsuing Bachlor Of Science From KK Collage Of Kadi.
             </p>
@@ -97,7 +97,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 21</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachlor</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Not Available</li>
                 </ul>
               </div>
@@ -220,7 +220,7 @@
  <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Vashishth</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Jimy</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         Designed by <a href="https://vashishth.epizy.com">Vashishth Patel</a>
