--- a/resume.html
+++ b/resume.html
@@ -105,7 +105,7 @@
               <ul>
                 <li>Got 9.42 CGPA in my very first sem.</li>
                 <li>3 times secured first place in my collage.</li>
-                <li>Secored 10th Rank in HNGU university in 2nd sem.</li>
+                <li>Secured 10th Rank in HNGU university in 2nd sem.</li>
                 <!-- <li></li> -->
               </ul>
               </p>
@@ -122,7 +122,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Vashishth</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Jimy</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         Designed by <a href="https://vashishth.epizy.com">Vashishth Patel</a>
