--- a/services.html
+++ b/services.html
@@ -168,7 +168,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Vashishth</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Jimy</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         Designed by <a href="https://vashishth.epizy.com">Vashishth Patel</a>
