--- a/contact.html
+++ b/contact.html
@@ -101,7 +101,7 @@
 
               <div class="phone">
                 <i class="icofont-instagram"></i>
-                <h4>id:</h4>
+                <h4>Instagram:</h4>
                 <p>j_chaudhary_08</p>
               </div>
 
