--- a/contact.html
+++ b/contact.html
@@ -80,8 +80,7 @@
         </div>
 
         <!-- <div>
-          <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" allowfullscreen></iframe>
-        </div> -->
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3648.0660260578843!2d73.07173131445848!3d23.887277289451617!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395da1c4ec4cbc09%3A0x4d6e3f2f124237af!2sBhajpura%2C%20Gujarat%20383440!5e0!3m2!1sen!2sin!4v1630472924857!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe></div> -->
 
         <div class="row mt-5">
 
