--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,7 @@
               <div class="email">
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
-                <p>vasuforyou481210@gmail.com</p>
+                <p>Jimychaudhary2208@gmail.com</p>
               </div>
 
               <div class="phone">
