--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Microbiology Specialist</h3>
             <p class="font-italic">
-              Parsuing Bachlor Of Science From KK Collage Of Kadi.
+              Parsuing Bachlor Of Science From KKPGSC, Kadi.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -96,7 +96,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 21</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 19</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Not Available</li>
                 </ul>
