--- a/resume.html
+++ b/resume.html
@@ -100,7 +100,7 @@
             <div class="resume-item">
               <h4>Bsc in Microbiology</h4>
               <h5>2019 - Present</h5>
-              <p><em>KK Patel Girls Collage , Nanikadi(Guj)</em></p>
+              <p><em>KKPGSC , Nanikadi(Guj)</em></p>
               <p>
               <ul>
                 <li>Got 9.42 CGPA in my very first sem.</li>
