--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         &copy; Copyright <strong><span>Jimy</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
-        Designed by <a href="https://vashishth.epizy.com">Vashishth Patel</a>
+        Designed by <a href="https://github.com/vasu-1/">Vashishth Patel</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
